--- a/spoknad-alerts-sbs.yaml
+++ b/spoknad-alerts-sbs.yaml
@@ -3,7 +3,7 @@ kind: "Alert"
 metadata:
   name: spoknad-alerts-sbs
   labels:
-    team: SPoknad
+    team: spoknad
 spec:
   receivers:
     slack:
