--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -10,25 +10,21 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - name: Call deployment-cli/action and apply yaml file to prod-fss
-        uses: navikt/deployment-cli/action@0.4.0
+      - name: Apply configuration file to prod-fss
+        uses: nais/deploy/actions/deploy@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          cluster: prod-fss
-          team: flex
-          rawresources: flex-alerts.yaml
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-fss
+          RESOURCE: flex-alerts.yaml
   deploy_prod_sbs:
     name: Deploy alert to prod-sbs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - name: Call deployment-cli/action and apply yaml file to prod-sbs
-        uses: navikt/deployment-cli/action@0.4.0
+      - name: Apply configuration file to prod-sbs
+        uses: nais/deploy/actions/deploy@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          cluster: prod-sbs
-          team: flex
-          rawresources: flex-alerts-sbs.yaml
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-sbs
+          RESOURCE: flex-alerts-sbs.yaml
