--- a/.github/workflows/deploy-workflow.yml
+++ b/.github/workflows/deploy-workflow.yml
@@ -4,6 +4,18 @@ on:
     branches:
       - master
 jobs:
+  deploy_prod_gcp:
+    name: Deploy alert to prod-gcp
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v1
+      - name: Apply configuration file to prod-gcp
+        uses: nais/deploy/actions/deploy@master
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: flex-alerts-gcp.yaml
   deploy_prod_fss:
     name: Deploy alert to prod-fss
     runs-on: ubuntu-latest
