--- a/flex-alerts-gcp.yaml
+++ b/flex-alerts-gcp.yaml
@@ -2,7 +2,7 @@ apiVersion: "nais.io/v1"
 kind: "Alert"
 metadata:
   name: flex-alerts-gcp
-  namespace: default
+  namespace: flex
   labels:
     team: flex
 spec:
