--- a/flex-alerts-gcp.yaml
+++ b/flex-alerts-gcp.yaml
@@ -26,7 +26,7 @@ spec:
       sla: respond within 1h, during office hours
       severity: danger
     - alert: flex-errorlogging
-      expr: (100 * sum by (log_app) (rate(logd_messages_total{log_app=~"spinnsyn-frontend|spinnsyn-backend",log_level="Error"}[5m])) / sum by (log_app) (rate(logd_messages_total{log_app=~"spinnsyn-frontend|spinnsyn-backend"}[5m]))) > 10
+      expr: (100 * sum by (log_app) (rate(logd_messages_total{log_app=~"spinnsyn-backend",log_level="Error"}[5m])) / sum by (log_app) (rate(logd_messages_total{log_app=~"spinnsyn-frontend|spinnsyn-backend"}[5m]))) > 10
       for: 3m
       description: "{{ $labels.log_app }} rapporterer error i loggene"
       action: "Sjekk loggene til {{ $labels.log_app }}, for å se hvorfor det er så mye feil (over 10 feil per 100 logger de siste 5 minuttene)"
