--- a/flex-alerts-gcp.yaml
+++ b/flex-alerts-gcp.yaml
@@ -12,17 +12,17 @@ spec:
       #prependText: '<!here> | '
   alerts:
     - alert: flex-app-nede
-      expr: up{team="flex"} == 0
-      for: 2m
+      expr: sum(up{team="flex"}) by (app) == 0
+      for: 1m
       description: "{{ $labels.app }} er nede"
-      action: "Se `kubectl describe pod {{ $labels.kubernetes_pod_name }}` for events, og `kubectl logs {{ $labels.kubernetes_pod_name }}` for logger"
+      action: "Se `kubectl describe pod {{ $labels.pod_name }} -n flex` for events, og `kubectl logs {{ $labels.pod_name }} -c {{ $labels.app }} -n flex` for logger"
       sla: respond within 1h, during office hours
       severity: danger
     - alert: flex-kontinuerlig-restart
-      expr: sum(increase(kube_pod_container_status_restarts_total{namespace="flex"}[30m])) by (container) > 2
-      for: 5m
+      expr: sum(increase(kube_pod_container_status_restarts_total{namespace="flex", container=~"spinnsyn-backend|spinnsyn-frontend|spinnsyn-backend-proxy"}[30m])) by (container) > 3
+      for: 1m
       description: "{{ $labels.container }} har restartet flere ganger siste halvtimen!"
-      action: "Se `kubectl describe pod {{ $labels.container }}` for events, og `kubectl logs {{ $labels.container }}` for logger"
+      action: "Se `kubectl describe pod {{ $labels.pod_name }} -n flex` for events, og `kubectl logs {{ $labels.pod_name }} -c {{ $labels.app }} -n flex` for logger"
       sla: respond within 1h, during office hours
       severity: danger
     - alert: flex-errorlogging
