--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -18,62 +18,22 @@ spec:
       action: "Se `kubectl describe pod {{ $labels.kubernetes_pod_name }}` for events, og `kubectl logs {{ $labels.kubernetes_pod_name }}` for logger"
       sla: respond within 1h, during office hours
       severity: danger
-    - alert: teamsykefravr-app-nede
-      expr: up{app=~"syfopdfgen|syfovarsel",job="kubernetes-pods"} == 0
-      for: 10m
-      description: "{{ $labels.app }} er nede"
-      action: "Se `kubectl describe pod {{ $labels.kubernetes_pod_name }}` for events, og `kubectl logs {{ $labels.kubernetes_pod_name }}` for logger"
-      sla: respond within 1h, during office hours
-      severity: danger
     - alert: flex-kontinuerlig-restart
-      expr: sum(increase(kube_pod_container_status_restarts_total{container=~"syfosoknad|syfopdfgen|syfogsak|syfosoknadvarsel|syfovarsel|syfoaltinn"}[30m])) by (container) > 2
+      expr: sum(increase(kube_pod_container_status_restarts_total{namespace="flex", container!="elector"}[30m])) by (container) > 2
       for: 5m
       description: "{{ $labels.container }} har restartet flere ganger siste halvtimen!"
       action: "Se `kubectl describe pod {{ $labels.container }}` for events, og `kubectl logs {{ $labels.container }}` for logger"
       sla: respond within 1h, during office hours
       severity: danger
     - alert: flex-mangler-metrikker
-      expr: absent(up{app=~"syfopdfgen|syfogsak|syfosoknadvarsel|syfovarsel|syfosoknad|syfoaltinn|syfotekster",job="kubernetes-pods"})
+      expr: absent(up{app=~"syfosoknad",job="kubernetes-pods"})
       for: 5m
       description: "{{ $labels.app }} rapporterer ingen metrikker"
       action: "Sjekk om {{ $labels.app }} er oppe"
       sla: respond within 1h, during office hours
       severity: danger
-    - alert: syfovarsel-lytter-stoppet
-      expr: sum(increase(syfovarsel_kafkalytter_stoppet_total[30m])) > 10
-      for: 10m
-      description: "{{ $labels.app }} syn kafkalytter har stoppet"
-      action: "Kafkalytter stoppet på syfovarsel. Sjekk logger, og evt. `kubectl delete pod {{ $labels.kubernetes_pod_name }}` for å restarte"
-    - alert: syfosoknadvarsel-lytter-stoppet
-      expr: sum(increase(syfosoknadvarsel_kafkalytter_stoppet_total[30m])) > 10
-      for: 10m
-      description: "{{ $labels.app }} sin kafkalytter har stoppet"
-      action: "Kafkalytter stoppet på syfosoknadvarsel. Sjekk logger, og evt. `kubectl delete pod {{ $labels.kubernetes_pod_name }}` for å restarte"
-      sla: respond within 1h, during office hours
-      severity: danger
-    - alert: syfogsak-lytter-stoppet
-      expr: sum(increase(syfogsak_kafkalytter_stoppet_total[30m])) > 0
-      for: 5m
-      description: "{{ $labels.app }} sin kafkalytter har stoppet"
-      action: "Kafkalytter stoppet på syfogsak. Sjekk logger, og evt. `kubectl delete pod {{ $labels.kubernetes_pod_name }}` for å restarte"
-      sla: respond within 1h, during office hours
-      severity: danger
-    - alert: syfogsak-ingenSoknaderBehandlet
-      expr: sum(increase(syfogsak_innsending_behandlet_total[24h])) < 0.8
-      for: 1m
-      description: "{{ $labels.app }} har ikke behandlet soknader på 24 timer"
-      action: "Syfogsak har ikke behandlet soknader på 24 timer. Sjekk i errorloggen: https://logs.adeo.no/goto/c117ef2a4003c420e43d391f8007ddda , og evt. `kubectl delete pod {{ $labels.kubernetes_pod_name }}` for å restarte"
-      sla: respond within 1h, during office hours
-      severity: danger
-    - alert: syfoaltinn-lytter-stoppet
-      expr: sum(increase(syfoaltinn_kafkalytter_stoppet_total[30m])) > 10
-      for: 10m
-      description: "{{ $labels.app }} sin kafkalytter har stoppet"
-      action: "Kafkalytter stoppet på syfoaltinn. Sjekk logger, og evt. `kubectl delete pod {{ $labels.kubernetes_pod_name }}` for å restarte"
-      sla: respond within 1h, during office hours
-      severity: danger
     - alert: flex-errorlogging
-      expr: (100 * sum by (log_app) (rate(logd_messages_total{log_app=~"syfopdfgen|syfoarbeidsgivertilgang|syfogsak|syfonarmesteleder|syfoservicestrangler|syfosoknadvarsel|syfovarsel|syfosoknad|syfoaltinn",log_level="Error"}[5m])) / sum by (log_app) (rate(logd_messages_total{log_app=~"syfopdfgen|syfoarbeidsgivertilgang|syfogsak|syfonarmesteleder|syfoservicestrangler|syfosoknadvarsel|syfovarsel|syfosoknad|syfoaltinn"}[5m]))) > 10
+      expr: (100 * sum by (log_app) (rate(logd_messages_total{log_team="flex",log_app!="elector",log_level="Error"}[5m])) / sum by (log_app) (rate(logd_messages_total{log_team="flex",log_app!="elector"}[5m]))) > 10
       for: 3m
       description: "{{ $labels.log_app }} rapporterer error i loggene"
       action: "Sjekk loggene til {{ $labels.log_app }}, for å se hvorfor det er så mye feil (over 10 feil per 100 logger de siste 5 minuttene)"
