Bruker sum(increase())

--- a/flex-alerts.yaml
+++ b/flex-alerts.yaml
@@ -19,7 +19,7 @@ spec:
       sla: respond within 1h, during office hours
       severity: danger
     - alert: flex-kontinuerlig-restart
-      expr: sum(kube_pod_container_status_restarts_total{namespace="flex", container!="elector", container!="cloudsql-proxy", container!="linkerd-proxy"}[30m])) by (container) > 2
+      expr: sum(increase(kube_pod_container_status_restarts_total{namespace="flex", container!="elector", container!="cloudsql-proxy", container!="linkerd-proxy"}[30m])) by (container) > 2
       for: 1m
       description: "{{ $labels.container }} har restartet flere ganger siste halvtimen!"
       action: "Se `kubectl describe pod {{ $labels.container }}` for events, og `kubectl logs {{ $labels.container }}` for logger"
