--- a/flex-alerts-new.yaml
+++ b/flex-alerts-new.yaml
@@ -3,6 +3,8 @@ kind: PrometheusRule
 metadata:
   name: flex-alerts
   namespace: flex
+  labels:
+    team: flex
 spec:
   groups:
     - name: flex-alerts
