--- a/flex-alerts-new.yaml
+++ b/flex-alerts-new.yaml
@@ -59,3 +59,13 @@ spec:
         labels:
           namespace: flex
           severity: warning
+      - alert: flex-app-cpu
+        expr: (sum(rate(container_cpu_usage_seconds_total{namespace="flex",container!="linkerd-proxy",container!="cloudsql-proxy",container!="POD",container!=""}[5m])) by (pod) / sum(kube_pod_container_resource_limits{namespace="flex",resource="cpu", container!="linkerd-proxy",container!="cloudsql-proxy"}) by (pod)) > 0.90
+        for: 1m
+        annotations:
+          consequence: Application cpu usage
+          action: "`kubectl get pod"
+          summary: Appen bruker mer enn 90% cpu
+        labels:
+          namespace: flex
+          severity: warning
